infra/k8s/overlays/production/networkpolic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mfr-care-network-policy
spec:
  podSelector:
    matchLabels:
      app: mfr-care
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: istio-system
    ports:
    - protocol: TCP
      port: 3000
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
  - to:
    - namespaceSelector:
        matchLabels:
          name: dbs
    ports:
    - protocol: TCP
      port: 5432
